# task

./: .editorconfig  .gitignore  CMakeLists.txt
cmakes/: clang-format.cmake  clang-sanitizers.cmake  clang-tidy.cmake  cppcheck.cmake  doxygen.cmake
docs/: Doxyfile.in  conf.py  index.rst
include/: DBInterface.hpp  ProjectGeneral.hpp  TaskGeneral.hpp
src/: CMakeLists.txt  DBInterface.cpp  ProjectGeneral.cpp  TaskGeneral.cpp  main.cpp
src/DBInterface/: CMakeLists.txt  DBConnection.hpp  DBInterface.cpp  DBInterface.hpp
src/Projects/: CMakeLists.txt  ProjectGeneral.cpp  ProjectGeneral.hpp
src/Tasks/: CMakeLists.txt  TaskGeneral.cpp  TaskGeneral.hpp
tests/: CMakeLists.txt  DBInterfaceTest.cpp
tests/DBInterfaceTest/: CMakeLists.txt  DBInterfaceTest.cpp
